--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,1 +1,3 @@
-<p>layout-page works!</p>
+<h1>Hero Layout</h1>
+ <router-outlet></router-outlet><!--Esto es para cargar los html de los hijos  -->
+ <h5>Footer</h5>
