--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,14 @@
-<p>login-page works!</p>
+<div class="flex flex-column">
+  <span class="text-lg mb-4">Login</span>
+  <mat-form-field>
+    <mat-label>Usuario  <mat-icon>person</mat-icon></mat-label>
+    <input type="text" matInput placeholder="Nombre de usuario">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Contraseña  <mat-icon>lock</mat-icon></mat-label>
+    <input type="password" matInput placeholder="Contraseña">
+  </mat-form-field>
+
+  <button mat-button mat-flat-button color="primary"> <mat-icon>save</mat-icon> Acceder</button>
+</div>
