--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,3 +1,44 @@
-<h1>Hero Layout</h1>
- <router-outlet></router-outlet><!--Esto es para cargar los html de los hijos  -->
- <h5>Footer</h5>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav mode="push" [ngStyle]="{width: '250px'}">
+    <mat-toolbar color="warn">
+      <span>Menú</span>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <mat-nav-list>
+      <!-- Definir enlace y acción de esconder el menú -->
+      <!-- <mat-list-item>
+        <mat-icon matListItemIcon>save</mat-icon>
+        Guardar
+      </mat-list-item> -->
+      <mat-list-item *ngFor="let item of sidebarItems" >
+        <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+        <a matListItemTitle href="{{item.url}}" (click)="sidenav.toggle()">
+          {{item.label}}
+        </a>
+      </mat-list-item>
+
+
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+     <span class="spacer"></span> <!--Spacer es una clase definida en el style.css-->
+    <button mat-button>
+      Logout
+    </button>
+  </mat-toolbar>
+
+  <div class="container">
+    <router-outlet></router-outlet><!--Esto es para cargar los html de los hijos  -->
+  </div>
+
+</mat-sidenav-container>
+
+
