--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -14,14 +14,13 @@
         <mat-icon matListItemIcon>save</mat-icon>
         Guardar
       </mat-list-item> -->
-      <mat-list-item *ngFor="let item of sidebarItems" >
+      <!--* Se genra *ngFor en el ancor (<a>) para que en cualquier lado en el que se haga click se dirija al URL (no solo en el texto)  -->
+      <a *ngFor="let item of sidebarItems" href="{{item.url}}" (click)="sidenav.toggle()">
+        <mat-list-item  matListItemTitle>
         <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
-        <a matListItemTitle href="{{item.url}}" (click)="sidenav.toggle()">
           {{item.label}}
-        </a>
-      </mat-list-item>
-
-
+        </mat-list-item>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
