--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,3 +1,39 @@
-<router-outlet></router-outlet>
+<ng-template #divLoading>
+  <mat-grid-list cols="1">
+    <mat-grid-tile>
+      <mat-spinner>
 
-<p>hero-page works!</p>
+      </mat-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
+</ng-template>
+
+<div *ngIf="hero; else divLoading" class="grid p-2">
+  <mat-card class="col-12 sm:col-6">
+    <mat-card-header>
+      <mat-card-title>{{hero.alter_ego}}</mat-card-title>
+      <mat-card-subtitle>{{hero.superhero}}</mat-card-subtitle>
+    </mat-card-header>
+    <img [src]="hero | heroImage" alt="hero.superhero" mat-card-image>
+  </mat-card>
+
+  <mat-card class="col-12 sm:col-6">
+    <mat-card-header>
+      <mat-card-title>Información</mat-card-title>
+      <mat-card-subtitle>{{hero.superhero}}</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item>{{hero.first_appearance}}</mat-list-item>
+        <mat-list-item>{{hero.characters}}</mat-list-item>
+        <mat-list-item>{{hero.publisher}}</mat-list-item>
+        <mat-list-item>{{hero.alter_ego}}</mat-list-item>
+      </mat-list>
+      <button mat-fab extended (click)="volverAlListado()">
+        <mat-icon>arrow_back</mat-icon>
+        <span>Volver al listado</span>
+      </button>
+    </mat-card-content>
+  </mat-card>
+</div>
