--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.d-flex{
+  display: flex;
+  align-items: center;
+  background-color: blue;
+}
