--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,3 +1,93 @@
 <router-outlet></router-outlet>
+<h1>
+  Editar/Añadir héroe
+  <small>Superman</small>
+</h1>
 
-<p>new-page works!</p>
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+        <!-- <div class="grid"> -->
+        <form class="grid" [formGroup]="heroForm">
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Super héroe</mat-label>
+            <input
+            type="text"
+            matInput
+            required
+            formControlName="superhero"
+            >
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alter ego</mat-label>
+            <input
+            type="text"
+            matInput
+            required
+            formControlName="alter_ego"
+            >
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Primera aparición</mat-label>
+            <input
+            type="text"
+            matInput
+            required
+            formControlName="first_appearance"
+            >
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Personajes</mat-label>
+            <input
+            type="text"
+            matInput
+            required
+            formControlName="characters"
+            >
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Creador</mat-label>
+            <mat-select
+              required
+              formControlName="publisher"
+              >
+              <mat-option *ngFor="let publisher of publishers" value="{{ publisher.id }}">
+                {{ publisher.desc }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Imagen alternativa</mat-label>
+            <input
+            type="text"
+            matInput
+            formControlName="alt_img"
+            >
+          </mat-form-field>
+        <!-- </div> -->
+        </form>
+
+        <div class="flex justify-content-between">
+          <button mat-flat-button color="warn">Borrar</button>
+          <button mat-flat-button color="primary">Guardar</button>
+        </div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <img src="" alt="Imagen del héroe" mat-card-image>
+    </mat-card>
+  </div>
+</div>
