--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -12,7 +12,7 @@
     <mat-card>
       <mat-card-content>
         <!-- <div class="grid"> -->
-        <form class="grid" [formGroup]="heroForm">
+        <form id="heroForm" class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super héroe</mat-label>
@@ -75,10 +75,9 @@
           </mat-form-field>
         <!-- </div> -->
         </form>
-
         <div class="flex justify-content-between">
-          <button mat-flat-button color="warn">Borrar</button>
-          <button mat-flat-button color="primary">Guardar</button>
+          <button mat-flat-button color="warn" form="heroForm">Borrar</button>
+          <button *ngIf="heroForm.valid" mat-flat-button color="primary" type="submit" form="heroForm">Guardar</button>
         </div>
 
       </mat-card-content>
