--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -10,5 +10,5 @@
     <input type="password" matInput placeholder="Contraseña">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary"> <mat-icon>save</mat-icon> Acceder</button>
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()"> <mat-icon>save</mat-icon> Acceder</button>
 </div>
